Update dependencies to BETA1 Adding missing dependencie to grammer to avoid a NoClassDefFound exception in M1 & M2 XML files Correct a problem with strange url in MavenForBinaryQueryImpl.